# collab-service/docs/swagger.json
@@ -29,36 +29,6 @@
                 "summary": "Get all folders that the user can access",
                 "responses": {}
             },
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Update a folder with the given ID and new name",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "folders"
-                ],
-                "summary": "Update a folder",
-                "parameters": [
-                    {
-                        "description": "Folder update request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.UpdateFolderRequest"
-                        }
-                    }
-                ],
-                "responses": {}
-            },
             "post": {
                 "security": [
                     {
@@ -91,6 +61,43 @@
             }
         },
         "/folders/{folderID}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update a folder with the given ID and new name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "folders"
+                ],
+                "summary": "Update a folder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Folder ID",
+                        "name": "folderID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Folder update request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateFolderRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
             "delete": {
                 "security": [
                     {
@@ -139,7 +146,7 @@
                     {
                         "type": "string",
                         "description": "Folder ID",
-                        "name": "id",
+                        "name": "folderID",
                         "in": "path",
                         "required": true
                     },
@@ -175,7 +182,7 @@
                     {
                         "type": "string",
                         "description": "Folder ID",
-                        "name": "id",
+                        "name": "folderID",
                         "in": "path",
                         "required": true
                     },
@@ -600,8 +607,80 @@
                 "responses": {}
             }
         },
+        "/teams/{teamId}/managers/{managerId}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Add a new manager to an existing team",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "teams"
+                ],
+                "summary": "Add a manager to a team",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Team ID (UUID)",
+                        "name": "teamId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Manager ID (UUID)",
+                        "name": "managerId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Remove a manager from an existing team",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "teams"
+                ],
+                "summary": "Remove a manager from a team",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Team ID (UUID)",
+                        "name": "teamId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Manager ID (UUID)",
+                        "name": "managerId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/teams/{teamId}/members": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -619,6 +698,13 @@
                 ],
                 "summary": "Add members to a team",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Team ID (UUID)",
+                        "name": "teamId",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Add members request",
                         "name": "request",
@@ -652,13 +738,18 @@
                 "summary": "Remove a member from a team",
                 "parameters": [
                     {
-                        "description": "Remove member request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.RemoveMemberRequest"
-                        }
+                        "type": "string",
+                        "description": "Team ID (UUID)",
+                        "name": "teamId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Member ID (UUID)",
+                        "name": "memberId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -730,8 +821,7 @@
         "dto.AddMembersRequest": {
             "type": "object",
             "required": [
-                "memberIds",
-                "teamId"
+                "memberIds"
             ],
             "properties": {
                 "memberIds": {
@@ -739,9 +829,6 @@
                     "items": {
                         "type": "string"
                     }
-                },
-                "teamId": {
-                    "type": "string"
                 }
             }
         },
@@ -793,17 +880,13 @@
                 }
             }
         },
-        "dto.RemoveMemberRequest": {
+        "dto.RosterResponse": {
             "type": "object",
-            "required": [
-                "memberId",
-                "teamId"
-            ],
             "properties": {
-                "memberId": {
-                    "type": "string"
+                "role": {
+                    "$ref": "#/definitions/entity.TeamAccessRole"
                 },
-                "teamId": {
+                "userId": {
                     "type": "string"
                 }
             }
@@ -846,7 +929,7 @@
                 "rosters": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.Roster"
+                        "$ref": "#/definitions/dto.RosterResponse"
                     }
                 },
                 "teamName": {
@@ -860,13 +943,9 @@
         "dto.UpdateFolderRequest": {
             "type": "object",
             "required": [
-                "id",
                 "name"
             ],
             "properties": {
-                "id": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 }
@@ -966,12 +1045,14 @@
             "enum": [
                 "OWNER",
                 "MANAGER",
-                "MEMBER"
+                "MEMBER",
+                "NONE"
             ],
             "x-enum-varnames": [
                 "TeamOwner",
                 "TeamManager",
-                "TeamMember"
+                "TeamMember",
+                "TeamNone"
             ]
         }
     },
