# collab-service/internal/domain/entity/roster.go
@@ -13,7 +13,19 @@ const (
 	TeamOwner   TeamAccessRole = "OWNER"
 	TeamManager TeamAccessRole = "MANAGER"
 	TeamMember  TeamAccessRole = "MEMBER"
+	TeamNone    TeamAccessRole = "NONE"
 )
+
+// IsHigherOrEqualTo checks if the current role has equal or higher privileges than the given role
+func (r TeamAccessRole) IsHigherOrEqualTo(other TeamAccessRole) bool {
+	roleWeight := map[TeamAccessRole]int{
+		TeamOwner:   3,
+		TeamManager: 2,
+		TeamMember:  1,
+	}
+
+	return roleWeight[r] >= roleWeight[other]
+}
 
 // Roster represents a user's membership in a team
 type Roster struct {
